# TSAI_ERA_V4_Session7

./: .gitignore  README.md  augmentation.py  config.py  models.py  optimized_cifar10_standalone.py  optimized_cifar_10_200k_model.ipynb  optimized_cifar_10_200k_model_modular.ipynb  pyproject.toml  training.py  training_log.txt  training_results_200k.json  utils.py
